# xmp-cli

./: .gitignore  .travis.yml  CREDITS  Changelog  INSTALL  Makefile  Makefile.am  Makefile.dos  Makefile.in  Makefile.nt  Makefile.os2  Makefile.w32  README  autogen.sh  configure.ac  watcom.mif
.github/workflows/: dist-package.yaml
os2/: Makefile.os2  unistd.h  usleep.c
src/: .gitignore  Makefile  Makefile.am  commands.c  common.h  delay.c  getopt.c  getopt1.c  getopt_long.c  info.c  keys.h  list.h  main-old.c  main.c  modules.conf  options.c  read_config.c  sound.c  sound.h  sound_ahi.c  sound_aiff.c  sound_aix.c  sound_alsa.c  sound_alsa05.c  sound_beos.c  sound_beos.cpp  sound_bsd.c  sound_coreaudio.c  sound_dart.c  sound_file.c  sound_hpux.c  sound_netbsd.c  sound_null.c  sound_openbsd.c  sound_oss.c  sound_pulseaudio.c  sound_qnx.c  sound_sb.c  sound_sgi.c  sound_sndio.c  (+8 more)
src/dos/: dosdma.c  dosdma.h  dosirq.c  dosirq.h  dossb.c  dossb.h  dosutil.c  dosutil.h
src/drivers/: alsa05.c  file.c  hpux.c  os2_dart.c  pulseaudio.c  qnx.c  sgi.c
src/watcom/: unistd.h  usleep.c
src/win32/: unistd.h  usleep.c
vc/: xmp.sln  xmp.vcproj
